# novamind

./: README.md  setup.py  test.py
csrc/: CMakeLists.txt  novamind.cpp  run.sh
csrc/core/: Tensor.cpp  memory_allocator.cpp  python_methods.cpp
csrc/libs/: Tensor.h  activation.h  math.h  memory_allocator.h  novamind.h  ops.h  print.h  python_methods.h  type.h  utils.h
csrc/operators/: activation.cpp  ops.cpp
csrc/test/: math_t.cpp  relu_t.cpp  tensor_t.cpp
csrc/utils/: math.cpp  utils.cpp
novamind/cnova/: README.md
novamind/ops/: im2col.py
test/: im_test.py  vgg_test.py
